--- a/index.html
+++ b/index.html
@@ -12,6 +12,27 @@
     
         <div id="map"></div>
 
+        <div class="outcomes-container">
+            <div class="outcomes">
+                <h2>Statuses</h2>
+                <div class="label-container">
+                    <h3>Active</h3>
+                    <h3>Recovered</h3>
+                    <h3>Deaths</h3>
+                </div>
+                <div class="totals-container">
+                    <h4 id="active-total">...</h4>
+                    <h4 id="recovered-total">...</h4>
+                    <h4 id="death-total">...</h4>
+                </div>
+                <div class="graph-container">
+                    <div class="graph" id="active"></div>
+                    <div class="graph" id="recovered"></div>
+                    <div class="graph" id="deaths"></div>
+                </div>
+            </div>
+        </div>
+
         <div class="map-controls-container">
             <div class="map-controls">
                 <form name="visControls">
